--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(135deg, #01bb3f 0%, #008b2e 100%);
 }
 
 .hero-bg {
