--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: linear-gradient(135deg, #01bb3f 0%, #008b2e 100%);
   display: flex;
   justify-content: center;
   align-items: center;
